# AuctionFlipper

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindCURLPP.cmake  LibFindMacros.cmake
src/: crow_all.h  main.cpp  nbt.hpp  robin_hood.h  strict_fstream.hpp  zstr.hpp
